@@ -28,7 +28,6 @@
 #include <X11/Xmd.h>
 #include <GL/gl.h>
 #include <GL/glxproto.h>
-#include <byteswap.h>
 #include <inttypes.h>
 #include "indirect_size.h"
 #include "indirect_size_get.h"
